@@ -77,7 +77,6 @@ import no.sikt.nva.nvi.common.service.model.InstitutionPoints.CreatorAffiliation
 import no.sikt.nva.nvi.common.service.model.PublicationDetails.PublicationDate;
 import no.sikt.nva.nvi.common.service.requests.UpsertCandidateRequest;
 import no.sikt.nva.nvi.test.LocalDynamoTest;
-import no.sikt.nva.nvi.test.TestUtils;
 import nva.commons.core.Environment;
 import nva.commons.core.paths.UriWrapper;
 import org.junit.jupiter.api.BeforeEach;
@@ -225,14 +224,14 @@ class CandidateTest extends LocalDynamoTest {
         var year = randomYear();
         var candidate = setupReportedCandidate(candidateRepository, year).candidate();
         var updateRequest = createUpsertCandidateRequest(candidate.publicationId(),
-                                                                   randomUri(),
-                                                                   true,
-                                                                   InstanceType.parse(candidate.instanceType()),
-                                                                   candidate.creatorCount(),
-                                                                   candidate.totalPoints(),
-                                                                   candidate.level().getValue(),
-                                                                   Integer.parseInt(year),
-                                                                   randomUri());
+                                                         randomUri(),
+                                                         true,
+                                                         InstanceType.parse(candidate.instanceType()),
+                                                         candidate.creatorCount(),
+                                                         candidate.totalPoints(),
+                                                         candidate.level().getValue(),
+                                                         Integer.parseInt(year),
+                                                         randomUri());
         assertThrows(IllegalCandidateUpdateException.class,
                      () -> Candidate.upsert(updateRequest, candidateRepository));
     }
@@ -325,8 +324,8 @@ class CandidateTest extends LocalDynamoTest {
             assertThat(dto.publicationId(), is(equalTo(createRequest.publicationId())));
             assertThat(dto.approvals().size(), is(equalTo(createRequest.institutionPoints().size())));
             assertThat(dto.notes().size(), is(2));
-            assertThat(dto.totalPoints(), is(equalTo(setScaleAndRoundingMode(totalPoints))));
-            var note = dto.notes().get(0);
+            assertThat(dto.totalPoints(), is(equalTo(adjustScaleAndRoundingMode(totalPoints))));
+            var note = dto.notes().getFirst();
             assertThat(note.text(), is(notNullValue()));
             assertThat(note.user(), is(notNullValue()));
             assertThat(note.createdDate(), is(notNullValue()));
@@ -341,7 +340,8 @@ class CandidateTest extends LocalDynamoTest {
             assertThat(rejectedAP.status(), is(equalTo(ApprovalStatusDto.REJECTED)));
             assertThat(rejectedAP.reason(), is(notNullValue()));
             assertThat(rejectedAP.points(),
-                       is(setScaleAndRoundingMode(createRequest.getPointsForInstitution(rejectedAP.institutionId()))));
+                       is(adjustScaleAndRoundingMode(
+                           createRequest.getPointsForInstitution(rejectedAP.institutionId()))));
         });
     }
 
@@ -353,7 +353,7 @@ class CandidateTest extends LocalDynamoTest {
         var institutionId = randomUri();
         var creatorId = randomUri();
         var creators = Map.of(creatorId, List.of(institutionId));
-        var institutionPoints = setScaleAndRoundingMode(randomBigDecimal());
+        var institutionPoints = adjustScaleAndRoundingMode(randomBigDecimal());
         var points = List.of(createInstitutionPoints(institutionId, institutionPoints, creatorId));
         var totalPoints = randomBigDecimal();
         var publicationDate = new PublicationDate(String.valueOf(CURRENT_YEAR), null, null);
@@ -372,8 +372,9 @@ class CandidateTest extends LocalDynamoTest {
         assertEquals(candidate.getPublicationDetails().publicationBucketUri(), publicationBucketUri);
         assertEquals(candidate.isApplicable(), isApplicable);
         assertEquals(candidate.getPublicationId(), publicationId);
-        assertEquals(candidate.getTotalPoints(), setScaleAndRoundingMode(totalPoints));
-        assertEquals(setScaleAndRoundingMode(candidate.getPointValueForInstitution(institutionId)), institutionPoints);
+        assertEquals(candidate.getTotalPoints(), adjustScaleAndRoundingMode(totalPoints));
+        assertEquals(adjustScaleAndRoundingMode(candidate.getPointValueForInstitution(institutionId)),
+                     institutionPoints);
         assertEquals(candidate.getInstitutionPointsMap().get(institutionId), institutionPoints);
         assertEquals(candidate.getInstitutionPoints(), points);
         assertEquals(candidate.getPublicationDetails().publicationDate(), publicationDate);
@@ -382,10 +383,11 @@ class CandidateTest extends LocalDynamoTest {
         assertEquals(candidate.getPublicationDetails().channelType().getValue(), createRequest.channelType());
         assertEquals(candidate.getPublicationDetails().publicationChannelId(), createRequest.publicationChannelId());
         assertEquals(candidate.getPublicationDetails().level(), createRequest.level());
-        assertEquals(candidate.getBasePoints(), setScaleAndRoundingMode(createRequest.basePoints()));
+        assertEquals(candidate.getBasePoints(), adjustScaleAndRoundingMode(createRequest.basePoints()));
         assertEquals(candidate.isInternationalCollaboration(),
                      createRequest.isInternationalCollaboration());
-        assertEquals(candidate.getCollaborationFactor(), setScaleAndRoundingMode(createRequest.collaborationFactor()));
+        assertEquals(candidate.getCollaborationFactor(),
+                     adjustScaleAndRoundingMode(createRequest.collaborationFactor()));
         assertEquals(candidate.getCreatorShareCount(), createRequest.creatorShareCount());
     }
 
@@ -621,7 +623,7 @@ class CandidateTest extends LocalDynamoTest {
         return new UriWrapper(HTTPS, API_DOMAIN).addChild(BASE_PATH, "candidate", identifier.toString()).getUri();
     }
 
-    private static BigDecimal setScaleAndRoundingMode(BigDecimal bigDecimal) {
+    private static BigDecimal adjustScaleAndRoundingMode(BigDecimal bigDecimal) {
         return bigDecimal.setScale(EXPECTED_SCALE, EXPECTED_ROUNDING_MODE);
     }
 
@@ -691,7 +693,7 @@ class CandidateTest extends LocalDynamoTest {
         Candidate.upsert(insertRequest, candidateRepository);
         var creators = IntStream.of(insertRequest.creators().size())
                            .mapToObj(i -> randomUri())
-                           .collect(Collectors.toMap(Function.identity(), e -> List.of(new URI[]{institutionId})));
+                           .collect(Collectors.toMap(Function.identity(), e -> List.of(institutionId)));
 
         var points = createPoints(creators);
 
@@ -715,13 +717,13 @@ class CandidateTest extends LocalDynamoTest {
                                     .channelType(ChannelType.parse(request.channelType()))
                                     .channelId(request.publicationChannelId())
                                     .level(DbLevel.parse(request.level()))
-                                    .basePoints(setScaleAndRoundingMode(request.basePoints()))
+                                    .basePoints(adjustScaleAndRoundingMode(request.basePoints()))
                                     .internationalCollaboration(request.isInternationalCollaboration())
-                                    .collaborationFactor(setScaleAndRoundingMode(request.collaborationFactor()))
+                                    .collaborationFactor(adjustScaleAndRoundingMode(request.collaborationFactor()))
                                     .creators(mapToDbCreators(request.creators()))
                                     .creatorShareCount(request.creatorShareCount())
                                     .points(mapToDbInstitutionPoints(request.institutionPoints()))
-                                    .totalPoints(setScaleAndRoundingMode(request.totalPoints()))
+                                    .totalPoints(adjustScaleAndRoundingMode(request.totalPoints()))
                                     .createdDate(candidate.getCreatedDate())
                                     .build(), randomString(), randomString()).candidate();
     }
